--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "printWidth": 80,
+  "trailingComma": "es5",
+  "parser": "babel"
 }
