--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "jest",
     "tsc": "tsc"
   },
+  "repository": {
+    "url": "https://github.com/musti-91/react-plopjs"
+  },
   "preferGlobal": true,
   "keywords": ["react", "plopjs", "dynamic react components"],
   "author": "Mustafa Alroomi<code.review.0@gmail.com>",
