--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-plopjs",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Generate boilerplate react components",
   "main": "lib/index.js",
   "bin": {
@@ -24,7 +24,9 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "minimist": "^1.2.5",
-    "plop": "^2.7.4"
+    "plop": "^2.7.4",
+    "glob": "^7.1.6",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -34,10 +36,8 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.20",
-    "glob": "^7.1.6",
     "jest": "^26.6.3",
     "path": "^0.12.7",
-    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
