--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-plopjs",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Generate boilerplate react components",
   "main": "lib/index.js",
   "bin": {
@@ -26,18 +26,18 @@
     "minimist": "^1.2.5",
     "plop": "^2.7.4",
     "glob": "^7.1.6",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "@babel/polyfill": "^7.12.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
-    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
-    "path": "^0.12.7",
     "typescript": "^4.1.3"
   }
 }
